# Voxl-Plugin

./: meson.build
gst-plugin/: meson.build
gst-plugin/src/: configuration.c  configuration.h  context.h  gstvoxlsrc.c  gstvoxlsrc.h  utils.c  utils.h
